--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <script>
@@ -20,10 +21,10 @@
         </script>
     </head>
     <body>
-    <form>
-        <input type="text" size="30" onkeyup="showResult(this.value)">
-        <div id="livesearch"></div>
-    </form>
+        <form>
+            <input type="text" size="30" onkeyup="showResult(this.value)">
+            <div id="livesearch"></div>
+        </form>
     
     </body>
 </html> 
