--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script>
-        function showResult(str) {
-        if (str.length==0) {
-            document.getElementById("livesearch").innerHTML="";
-            document.getElementById("livesearch").style.border="0px";
-            return;
-        }
-        var xmlhttp=new XMLHttpRequest();
-        xmlhttp.onreadystatechange=function() {
-            if (this.readyState==4 && this.status==200) {
-            document.getElementById("livesearch").innerHTML=this.responseText;
-            document.getElementById("livesearch").style.border="1px solid #A5ACB2";
-            }
-        }
-        xmlhttp.open("GET","livesearch.php?q="+str,true);
-        xmlhttp.send();
-        }
-        </script>
-    </head>
-    <body>
-        <form>
-            <input type="text" size="30" onkeyup="showResult(this.value)">
-            <div id="livesearch"></div>
-        </form>
-    
-    </body>
-</html> 
+<head>
+	<title>Live Search Plugin</title>
+    <meta charset="utf-8"/>
+    <meta name="author" name="achraf bellaali"/>
+    <!--
+        Email : achraf.bellaali@gmail.com
+        Github : https://github.com/IndianGhost
+        Twitter : @achraf_bellaali
+        LinkedIn : achraf bellaali
+    -->
+	<link rel="stylesheet" href="css/bootstrap.min.css"/>
+	<style type="text/css">
+		table{
+			width: 100%;
+		}
+	</style>
+    <script src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/draw_table.js"></script>
+</head>
+<body>
+	<div class="container">
+		<div class="jumbotron">
+            <h1 class="display-4">Live Search HTML !</h1>
+            <p class="lead">This is a simple jQuery plugin, developed by <a href="https://github.com/IndianGhost">Achraf Bellaali</a>.</p>
+            <hr class="my-4">
+            <p>You can use in any web project to find quickly your data especially for tables that contains a lot of rows.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="https://github.com/IndianGhost/liveSearch" role="button">Download it from github</a>
+            </p>
+        </div>
+        <center>
+            <div class="form-group">
+                <input type="text" class="form-control" style="width: 20%" id="js-search" placeholder="Taper pour chercher…">
+            </div>
+        </center>
+		
+		<table class="table js-table">
+			<thead class="js-thead"></thead>
+			<tbody></tbody>
+		</table>
+	</div>
+	<script type="text/javascript" src="js/search.js"></script>
+</body>
+</html>
