--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Starter Template · Bootstrap</title>
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="livesearch/css/ajaxlivesearch.css" rel="stylesheet">
     <link href="starter-template.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
@@ -57,29 +58,28 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" id="ls_query"  type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      <div class="dropdown-menu dropdown-menu-right m-0 p-0 mr-4 show" style="overflow:overlay; max-height: 40em; border: none; background-color:unset;" aria-labelledby="qu">
+        <div id="livesearch" style="display: block;">
+          <a href="https://hardel.fr/">Test</a><br/>
+          <a href="https://hardel.fr/">Test</a><br/>
+          <a href="https://hardel.fr/">Test</a><br/>
+          <a href="https://hardel.fr/">Test</a><br/>
+          <a href="https://hardel.fr/">Test</a><br/>
+        </div>
+      </div>
     </form>
   </div>
 </nav>
 
 <main role="main" class="container">
-  <div id="livesearch">
-    <table class="table js-table">
-      <thead class="js-thead"></thead>
-      <tbody>
-      </tbody>
-    </table>
-  </div>
+
   <div class="starter-template">
     <h1>Bootstrap starter template</h1>
     <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
   </div>
 
 </main><!-- /.container -->
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script type="text/javascript" src="livesearch/js/draw_table.js"></script>
-<script type="text/javascript" src="livesearch/js/search.js"></script>
-<script src="bootstrap/js/bootstrap.bundle.js"></script>
-</body>
+<script src="livesearch/js/ajaxlivesearch.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="bootstrap/js/bootstrap.bundle.js"></script></body>
 </html>
