--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Starter Template · Bootstrap</title>
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="livesearch/css/ajaxlivesearch.css" rel="stylesheet">
     <link href="starter-template.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
@@ -60,11 +59,11 @@
       <input class="form-control mr-sm-2" id="ls_query"  type="text" placeholder="Search" aria-label="Search">
       <div class="dropdown-menu dropdown-menu-right m-0 p-0 mr-4 show" style="overflow:overlay; max-height: 40em; border: none; background-color:unset;" aria-labelledby="qu">
         <div id="livesearch" style="display: block;">
-          <a href="https://hardel.fr/">Test</a><br/>
-          <a href="https://hardel.fr/">Test</a><br/>
-          <a href="https://hardel.fr/">Test</a><br/>
-          <a href="https://hardel.fr/">Test</a><br/>
-          <a href="https://hardel.fr/">Test</a><br/>
+          <table class="livesearch-table"> 
+            <tbody>
+              <tr><td><a class="nav-link" href="https://hardel.fr/">Test</a></td></tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </form>
@@ -79,7 +78,10 @@
   </div>
 
 </main><!-- /.container -->
-<script src="livesearch/js/ajaxlivesearch.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="bootstrap/js/bootstrap.bundle.js"></script></body>
+<script src="livesearch/js/jquery.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
+<script src="bootstrap/js/bootstrap.bundle.js"></script>
+<script src="livesearch/js/draw_table.js"></script>
+<script src="livesearch/js/search.js"></script>
+</body>
 </html>
