--- a/index.html
+++ b/index.html
@@ -9,24 +9,7 @@
     <title>Starter Template · Bootstrap</title>
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="starter-template.css" rel="stylesheet">
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <!-- Custom styles for this template -->
+    <link href="template.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -57,7 +40,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" id="ls_query"  type="text" placeholder="Search" aria-label="Search">
-      <div class="dropdown-menu dropdown-menu-right .ml-auto align-baseline  show livesearch" data-toggle="dropdown" style="border: none; background-color:unset;">
+      <div class="dropdown-menu dropdown-menu-right .ml-auto align-baseline  show livesearch" style="border: none; background-color:unset;">
 
           <table class="livesearch-table table-borderless"> 
             <tbody>
