--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" id="ls_query"  type="text" placeholder="Search" aria-label="Search">
-      <div class="dropdown-menu dropdown-menu-right .ml-auto align-baseline  show livesearch" style="border: none; background-color:unset;">
+      <div class="dropdown-menu dropdown-menu-right .ml-auto align-baseline show bg-wight border livesearch" style="border: none;">
 
           <table class="livesearch-table table-borderless"> 
             <tbody>
