--- a/markdown.html
+++ b/markdown.html
@@ -9,6 +9,7 @@
   <title>A2va</title>
   <!-- Bootstrap core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="default.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
 
@@ -26,7 +27,7 @@
           <a class="nav-link" href="https://a2va.github.io/">A2va<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="markdown.html">Link</a>
+          <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -54,19 +55,19 @@
     </div>
   </nav>
 
-  <main role="main" class="container">
+  <main role="main" class="container main">
+    <div class="markdown" href="file.md"></div>
 
-    <div class="main_text">
-      <h1>Bootstrap starter template</h1>
-      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
-        mostly barebones HTML document.</p>
-    </div>
 
   </main><!-- /.container -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
+  <script src="livesearch/js/jquery.min.js"></script>
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
   <script src="livesearch/js/draw_table.js"></script>
   <script src="livesearch/js/search.js"></script>
+  <script src="markdown.js"></script>
 </body>
 
 </html>
