--- a/markdown.html
+++ b/markdown.html
@@ -9,8 +9,8 @@
   <title>A2va</title>
   <!-- Bootstrap core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="default.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="css/default.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
