--- a/markdown.html
+++ b/markdown.html
@@ -65,9 +65,8 @@
   <script src=" https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="livesearch/js/draw_table.js"></script>
-  <script src="livesearch/js/search.js"></script>
-  <script src="markdown.js"></script>
+  <script src="js/livesearch.js"></script>
+  <script src="js/markdown.js"></script>
 </body>
 
 </html>
