--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
   </main><!-- /.container -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="livesearch/js/draw_table.js"></script>
-  <script src="livesearch/js/search.js"></script>
+  <script src="js/livesearch.js"></script>
 </body>
 
 </html>
