--- a/html/markdown.html
+++ b/html/markdown.html
@@ -60,9 +60,8 @@
 
 
   </main><!-- /.container -->
-  <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
-  <script src="livesearch/js/jquery.min.js"></script>
-  <script src=" https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
   <script src="js/livesearch.js"></script>
