--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="https://a2va.github.io/">A2va<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="markdown.html">Link</a>
+          <a class="nav-link" href="html/markdown.html">Link</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -43,7 +43,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-        <div class="dropdown-menu dropdown-menu-right col-md-3 show bg-wight border livesearch">
+        <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border livesearch">
 
           <table class="livesearch-table table-borderless">
             <tbody>
