--- a/html/markdown.html
+++ b/html/markdown.html
@@ -8,9 +8,9 @@
   <meta name="author" content="A2va">
   <title>A2va</title>
   <!-- Bootstrap core CSS -->
-  <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="css/default.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="../css/highlight_default.css" rel="stylesheet">
+  <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-        <div class="dropdown-menu dropdown-menu-right col-md-3 show bg-wight border livesearch">
+        <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border livesearch">
 
           <table class="livesearch-table table-borderless">
             <tbody>
@@ -63,9 +63,9 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
-  <script src="bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="js/livesearch.js"></script>
-  <script src="js/markdown.js"></script>
+  <script src="../bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="../js/livesearch.js"></script>
+  <script src="../js/markdown.js"></script>
 </body>
 
 </html>
