Dynamic markdpwn files loading

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
           <a class="nav-link" href="https://a2va.github.io/">A2va<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="html/markdown.html">Link</a>
+          <a class="nav-link" href="html/file.md">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="html/markdown.html">Link 2</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -55,17 +58,20 @@
   </nav>
 
   <main role="main" class="container">
-
-    <div class="main_text">
+    <div class="main_placeholder">
       <h1>Bootstrap starter template</h1>
       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
-        mostly barebones HTML document.</p>
+        mostly barebones HTML x.</p>
     </div>
 
   </main><!-- /.container -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script src="js/livesearch.js"></script>
+  <script src="js/markdown.js"></script>
+  <script src="js/link.js"></script>
 </body>
 
 </html>
