--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+  <script> hljs.initHighlightingOnLoad();</script>
   <script src="js/livesearch.js"></script>
   <script src="js/markdown.js"></script>
   <script src="js/link.js"></script>
