--- a/index.html
+++ b/index.html
@@ -13,50 +13,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_redstone"
-      aria-controls="navbar_redstone" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div id="nav-placeholder">
 
-    <div class="collapse navbar-collapse" id="navbar_redstone">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="https://a2va.github.io/">A2va<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="html/file.md">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="html/markdown.html">Link 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-        <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border livesearch">
-
-          <table class="livesearch-table table-borderless">
-            <tbody>
-            </tbody>
-          </table>
-        </div>
-      </form>
-    </div>
-  </nav>
-
+  </div>
   <main role="main" class="container">
     <div class="main_placeholder">
       <h1>Bootstrap starter template</h1>
@@ -72,7 +31,11 @@
   <script> hljs.initHighlightingOnLoad();</script>
   <script src="js/livesearch.js"></script>
   <script src="js/markdown.js"></script>
-  <script src="js/link.js"></script>
+  <script>
+    jQuery(function () {
+      $("#nav-placeholder").load("navigation.html");
+    });
+    </script>
 </body>
 
 </html>
