--- a/html/markdown.html
+++ b/html/markdown.html
@@ -7,65 +7,37 @@
   <meta name="description" content="">
   <meta name="author" content="A2va">
   <title>A2va</title>
-  <!-- Bootstrap core CSS -->
-  <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="../css/highlight_default.css" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
+  <!-- Import CSS files -->
+  <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/highlight_default.css">
+  <!-- Import javascript files -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+  <script> hljs.initHighlightingOnLoad();</script>
+  <script src="/js/livesearch.js"></script>
+  <script src="/js/markdown.js"></script>
+  <!-- Load the navigation bar -->
+  <script>
+    jQuery(function () {
+      let data = $("#nav-placeholder").load("/html/navigation-bar.txt");
+    });
+  </script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_redstone"
-      aria-controls="navbar_redstone" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbar_redstone">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="https://a2va.github.io/">A2va<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-        <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border livesearch">
-
-          <table class="livesearch-table table-borderless">
-            <tbody>
-            </tbody>
-          </table>
-        </div>
-      </form>
+  <!-- A placeholder for the navigation bar -->
+  <div id="nav-placeholder">
+  </div>
+  <main role="main" class="container">
+    <div class="main_text main_placeholder">
+      <h1>Bootstrap starter template</h1>
+      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
+        mostly barebones HTML x.</p>
     </div>
-  </nav>
-
-  <main role="main" class="container main">
-    <div class="markdown" href="file.md"></div>
-
-
   </main><!-- /.container -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
-  <script src="../bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="../js/livesearch.js"></script>
-  <script src="../js/markdown.js"></script>
 </body>
 
 </html>
