--- a/html/navigation-bar.html
+++ b/html/navigation-bar.html
@@ -11,10 +11,10 @@
         <a class="nav-link" href="https://a2va.github.io/">A2va<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="html/file.md">Link</a>
+        <a class="nav-link" href="/html/file.md">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="html/markdown.html">Link 2</a>
+        <a class="nav-link" href="/html/markdown.html">Link 2</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
