--- a/html/navigation-bar.html
+++ b/html/navigation-bar.html
@@ -31,10 +31,10 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-      <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border livesearch">
+      <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border" id="livesearch">
 
-        <table class="livesearch-table table-borderless">
-          <tbody>
+        <table id="livesearch-table" table-borderless">
+          <tbody id="tbody_search">
           </tbody>
         </table>
       </div>
