Load nav bar and set table without jquery

--- a/html/navigation-bar.html
+++ b/html/navigation-bar.html
@@ -31,12 +31,12 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-      <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border" id="livesearch">
+      <div class="dropdown-menu dropdown-menu-right col-md-3" id="livesearch">
+          <!-- <table class="livesearch-table" id="livesearch-table" table-borderless>
+            <tbody id="livesearch-table-body">
 
-        <table id="livesearch-table" table-borderless">
-          <tbody id="tbody_search">
-          </tbody>
-        </table>
+            </tbody>
+        </table> -->
       </div>
     </form>
   </div>
