Fix search bar and convert it to vanilla javascript

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
   <div id="nav-placeholder">
   </div>
   <main role="main" class="container">
-    <table class="livesearch-table" id="livesearch-table" table-borderless>
-      <tbody id="livesearch-table-body">
-
-      </tbody>
+    <!-- <div id="livesearch">
+      <table class="livesearch-table" id="livesearch-table" table-borderless>
+        <tbody id="livesearch-table-body">
+        </tbody>
     </table>
+  </div> -->
     <div class="main_text main_placeholder">
       <h1>Bootstrap starter template</h1>
       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
