--- a/html/navigation-bar.html
+++ b/html/navigation-bar.html
@@ -31,12 +31,12 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" id="ls_query" type="text" placeholder="Search" aria-label="Search">
-      <div class="dropdown-menu dropdown-menu-right col-md-3" id="livesearch">
-          <!-- <table class="livesearch-table" id="livesearch-table" table-borderless>
+      <div class="dropdown-menu dropdown-menu-right col-md-3 bg-wight border" id="livesearch">
+          <table class="livesearch-table table-borderless" id="livesearch-table">
             <tbody id="livesearch-table-body">
 
             </tbody>
-        </table> -->
+        </table>
       </div>
     </form>
   </div>
