--- a/html/markdown.html
+++ b/html/markdown.html
@@ -15,15 +15,11 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>>
-  <script src="/js/livesearch.js"></script>
-  <script src="/js/markdown.js"></script>
-  <!-- Load the navigation bar -->
-  <script>
-    jQuery(function () {
-      let data = $("#nav-placeholder").load("/html/navigation-bar.html");
-    });
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+  <script src="/js/loader.js" type="module"></script>
+  <script src="/js/livesearch.js" type="module"></script>
+  <script src="/js/markdown.js"type="module"></script>
+
 </head>
 
 <body>
