--- a/html/template.html
+++ b/html/template.html
@@ -16,9 +16,9 @@
   <script src="bootstrap/js/bootstrap.bundle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
-  <script src="/js/livesearch.js"></script>
-  <script src="/js/markdown.js"></script>
-
+  <script src="/js/loader.js" type="module"></script>
+  <script src="/js/livesearch.js" type="module"></script>
+  <script src="/js/markdown.js"type="module"></script>
 </head>
 
 <body>
