Refactor markdown without jquery

--- a/html/template.html
+++ b/html/template.html
@@ -26,7 +26,7 @@
   <div id="nav-placeholder">
   </div>
   <main role="main" class="container">
-    <div class="main_text main_placeholder">
+    <div class="main_text main_placeholder" id="main_placeholder">
       <h1>Bootstrap starter template</h1>
       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
         mostly barebones HTML x.</p>
