--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </tbody>
     </table>
   </div> -->
-    <div class="main_text main_placeholder">
+    <div class="main_text" id="main_placeholder">
       <h1>Bootstrap starter template</h1>
       <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a
         mostly barebones HTML x.</p>
