--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <meta name="author" content="A2va">
   <title>A2va</title>
   <!-- Import CSS files -->
-  <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/highlight_default.css" rel="stylesheet">
   <!-- Import javascript files -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script src="/js/loader.js" type="module"></script>
